force-app/main/default/objects/vlocity_cmt__Dunning__c/vlocity_cmt__Dunning__c.object-meta.xml
<CustomObject>
    <description>Represents collection acitvities of the customer or vendors to make payment on outstanding invoices. It typically consists of late payment or past due payment reminders or service disconnect notices. Master-detail child object of an Account.</description>
    <label>Collections Activity</label>
    <nameField>
        <label>Collections Activity Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collections Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>