force-app/main/default/objects/vlocity_cmt__Dunning__c/fields/vlocity_cmt__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AccountId__c</fullName>
    <description>Account ID associated with the collections activity</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collections Activities</relationshipLabel>
    <relationshipName>CollectionsActivities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>