force-app/main/default/objects/vlocity_cmt__Dunning__c/fields/vlocity_cmt__CollectionsEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CollectionsEndDate__c</fullName>
    <description>The date on which the Collections Activity ended.</description>
    <label>Collections Activity End Date</label>
    <type>Date</type>
</CustomField>