force-app/main/default/objects/vlocity_cmt__Dunning__c/fields/vlocity_cmt__CollectionsStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CollectionsStartDate__c</fullName>
    <description>Date the collections activity started.</description>
    <label>Collections Activity Start Date</label>
    <type>Date</type>
</CustomField>