force-app/main/default/objects/vlocity_cmt__Dunning__c/fields/vlocity_cmt__NextCollectionsActivity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__NextCollectionsActivity__c</fullName>
    <description>Next planned collections activity.</description>
    <label>Next Collections Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Late payment assessed</fullName>
            </value>
            <value>
                <fullName>Past due notice</fullName>
            </value>
            <value>
                <fullName>Disconnect notice</fullName>
            </value>
            <value>
                <fullName>Payment plan deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>